# nih-plug-egui

./: AGENTS.md  Cargo.toml  README.md  bundler.toml  justfile  regression-checklist.md  rustfmt.toml
examples/: simple.rs
patched/baseview/: Cargo.toml
patched/baseview/src/macos/: view.rs
patched/egui-baseview/: Cargo.toml
patched/egui-baseview/src/: lib.rs  translate.rs  window.rs
patched/egui-baseview/src/renderer/: opengl.rs
patched/egui-baseview/src/renderer/opengl/: renderer.rs
patched/egui-baseview/src/renderer/wgpu/: renderer.rs
patched/nih_plug_egui/: Cargo.toml
patched/nih_plug_egui/src/: editor.rs  lib.rs  resizable_window.rs
patched/nih_plug_egui/src/widgets/: generic_ui.rs  param_slider.rs  util.rs
src/: lib.rs  simple_plugin.rs  widgets.rs
xtask/: Cargo.toml
xtask/src/: main.rs
