[workspace]
resolver = "2"
members = [
    ".",
    "xtask",
]

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "17ba595e748927290eb72974bc528f11d1d20e89", default-features = false, features = ["vst3"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "17ba595e748927290eb72974bc528f11d1d20e89" }
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "17ba595e748927290eb72974bc528f11d1d20e89" }

[package]
name = "nih_plug_egui_test"
version = "0.1.0"
edition = "2021"
authors = [
    "iglak <iglak.me@gmail.com>",
    "Max Huttunen <max.huttunen@gmail.com>",
]
license = "ISC"
description = "An egui example plugin for testing nih-plug-egui"
homepage = "https://github.com/robbert-vdh/nih-plug"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }

[dev-dependencies]
nih_plug = { workspace = true, features = ["standalone"] }
