[package]
name = "nih_plug_egui"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use egui GUIs with NIH-plug"

[features]
default = ["opengl", "default_fonts"]
# `nih_plug_egui` always uses OpenGL since egui's wgpu backend is still unstable
# depending on the platform
opengl = ["egui-baseview/opengl"]
default_fonts = ["egui-baseview/default_fonts"]
rayon = ["egui-baseview/rayon"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "17ba595e748927290eb72974bc528f11d1d20e89", default-features = false }
raw-window-handle = "0.5"
baseview = { git = "https://github.com/toiglak/baseview.git", rev = "2a8d3a6cd40d35eba03483125923af770de0a84e" }
crossbeam = "0.8"
egui-baseview = { path = "../egui-baseview" }
parking_lot = "0.12"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
